--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.App, html {
+  background-color: rgb(53, 53, 53);
+  color: #d4d4d4;
 }
